Style applied with compatilility to different android versions and orientation

--- a/app/src/main/res/layout-land/logging_activity.xml
+++ b/app/src/main/res/layout-land/logging_activity.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:paddingLeft="16dp"
                 android:paddingTop="16dp"
                 android:paddingRight="16dp"
                 android:paddingBottom="16dp">
-    
+
     <ImageView
         android:id="@+id/iconImageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/ic_cash_96"
         android:scaleType="center"/>
-    
+
     <EditText
         android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/iconImageView"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginRight="150dp"
         android:layout_centerHorizontal="true"
         android:inputType="textPersonName"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:hint="@string/user_name"/>
 
     <EditText
@@ -35,11 +35,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/usernameEditText"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginRight="150dp"
         android:layout_centerHorizontal="true"
         android:inputType="textPassword"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:hint="@string/user_password"/>
 
     <Button
@@ -47,9 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/passwordEditText"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:text="@string/log_in"
         android:background="@drawable/rounded_button"/>
 
@@ -60,7 +60,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"
-        android:textSize="16sp"
+        android:textSize="12sp"
         android:text="@string/create_acc"
         android:background="#00000000"/>
 
