--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorPrimaryDark"/>
+    <item android:drawable="@color/material_light_blue_500"/>
     <item>
         <bitmap android:src="@drawable/ic_cash_96"
                 android:gravity="center"/>
