--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,21 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/material_light_blue_700</item>
+        <item name="colorPrimaryDark">@color/material_light_blue_900</item>
+        <item name="colorAccent">@color/material_light_green_700</item>
+        <item name="android:colorBackground">@color/material_light_blue_500</item>
     </style>
 
-    <style name="SplashTheme" parent="android:Theme.Holo.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_backgorund</item>
+    <style name="AppTheme.NoActionBar" parent="android:Theme.Holo.NoActionBar">
+        <item name="colorPrimary">@color/material_light_blue_700</item>
+        <item name="colorPrimaryDark">@color/material_light_blue_900</item>
+        <item name="colorAccent">@color/material_light_green_700</item>
+        <item name="android:colorBackground">@color/material_light_blue_500</item>
+    </style>
+
+    <style name="SplashTheme" parent="AppTheme.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 
 </resources>
