--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:colorPrimary">@color/material_light_blue_700</item>
         <item name="android:colorPrimaryDark">@color/material_light_blue_900</item>
         <item name="android:colorBackground">@color/material_light_blue_500</item>
         <item name="android:colorAccent">@color/material_light_green_700</item>
+        <item name="android:textColor">#ffffff</item>
     </style>
-
-    <style name="AppTheme.NoActionBar" parent="android:Theme.Material.NoActionBar">
-        <item name="android:colorPrimary">@color/material_light_blue_700</item>
-        <item name="android:colorPrimaryDark">@color/material_light_blue_900</item>
-        <item name="android:colorBackground">@color/material_light_blue_500</item>
-        <item name="android:colorAccent">@color/material_light_green_700</item>
-    </style>
-
-    <style name="SplashTheme" parent="AppTheme.NoActionBar">
+    <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 </resources>
