--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/material_light_blue_700</item>
         <item name="colorPrimaryDark">@color/material_light_blue_900</item>
@@ -9,14 +9,7 @@
         <item name="android:colorBackground">@color/material_light_blue_500</item>
     </style>
 
-    <style name="AppTheme.NoActionBar" parent="android:Theme.Holo.NoActionBar">
-        <item name="colorPrimary">@color/material_light_blue_700</item>
-        <item name="colorPrimaryDark">@color/material_light_blue_900</item>
-        <item name="colorAccent">@color/material_light_green_700</item>
-        <item name="android:colorBackground">@color/material_light_blue_500</item>
-    </style>
-
-    <style name="SplashTheme" parent="AppTheme.NoActionBar">
+    <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 
