Inserting catalog to database

--- a/app/src/main/res/layout/activity_catalogs.xml
+++ b/app/src/main/res/layout/activity_catalogs.xml
@@ -16,4 +16,12 @@
         android:theme="@style/AppTheme"
         app:popupTheme="@style/AppTheme"/>
 
+    <Button
+        android:id="@+id/create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textSize="24sp"
+        android:text="CREATE"/>
+
 </RelativeLayout>
