--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppThemeMaterial" parent="android:Theme.Material.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:colorPrimary">@color/material_light_blue_700</item>
         <item name="android:colorPrimaryDark">@color/material_light_blue_900</item>
         <item name="android:colorBackground">@color/material_light_blue_500</item>
         <item name="android:colorAccent">@color/material_light_green_700</item>
-        <item name="android:textColor">#ffffff</item>
     </style>
-    <style name="SplashTheme" parent="AppTheme">
+
+    <style name="AppThemeCompat" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:colorPrimary">@color/material_light_blue_700</item>
+        <item name="android:colorPrimaryDark">@color/material_light_blue_900</item>
+        <item name="android:colorBackground">@color/material_light_blue_500</item>
+        <item name="android:colorAccent">@color/material_light_green_700</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:actionMenuTextColor">@android:color/white</item>
+    </style>
+    ada
+    <style name="SplashTheme" parent="AppThemeMaterial">
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 </resources>
