--- a/app/src/main/res/layout/catalog_card.xml
+++ b/app/src/main/res/layout/catalog_card.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="@dimen/activity_vertical_margin">
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+                                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        xmlns:tools="http://schemas.android.com/tools"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:scrollbars="vertical"
+                                        android:padding="@dimen/activity_vertical_margin">
 
     <android.support.v7.widget.CardView
         android:id="@+id/catalogCardView"
@@ -57,4 +57,4 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</android.support.v7.widget.RecyclerView>
