--- a/app/src/main/res/layout/catalog_card.xml
+++ b/app/src/main/res/layout/catalog_card.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        xmlns:tools="http://schemas.android.com/tools"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:scrollbars="vertical"
-                                        android:padding="@dimen/activity_vertical_margin">
 
     <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/catalogCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         app:cardCornerRadius="4dp"
-        android:elevation="4dp">
+        android:elevation="4dp"
+        app:cardBackgroundColor="@color/material_light_blue_800">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,8 +47,7 @@
             <TextView
                 android:id="@+id/catalogDaterangeTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:gravity="left"
                 android:layout_marginTop="16dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
@@ -56,5 +55,3 @@
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-</android.support.v7.widget.RecyclerView>
