--- a/app/src/main/res/layout/add_catalog_dialog.xml
+++ b/app/src/main/res/layout/add_catalog_dialog.xml
@@ -39,4 +39,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="@string/end_date"/>
 
+    <Spinner
+        android:id="@+id/currencySpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
 </LinearLayout>
