--- a/app/src/main/res/layout/catalog_card.xml
+++ b/app/src/main/res/layout/catalog_card.xml
@@ -7,7 +7,8 @@
         android:id="@+id/catalogCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:cardCornerRadius="4dp"
@@ -50,7 +51,7 @@
                 android:layout_height="match_parent"
                 android:gravity="left"
                 android:layout_marginTop="16dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 tools:text="From 01/12/2016 To 20/01/2017"/>
 
         </LinearLayout>
