--- a/app/src/main/res/layout/fragment_queries.xml
+++ b/app/src/main/res/layout/fragment_queries.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:text="QUERIES FRAGMENT"
+        android:text="QUERIES FRAGMENT"
         android:textSize="36sp"
         android:gravity="center"/>
 
