--- a/app/src/main/res/layout/fragment_receipts.xml
+++ b/app/src/main/res/layout/fragment_receipts.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -8,8 +8,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:text="RECEIPTS FRAGMENT"
+        android:text="RECEIPTS FRAGMENT"
         android:textSize="36sp"
         android:gravity="center"/>
 
-</FrameLayout>
+</RelativeLayout>
