--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:text="REPORT FRAGMENT"
+        android:text="REPORT FRAGMENT"
         android:textSize="36sp"
         android:gravity="center"/>
 
