--- a/app/src/main/res/layout/catalog_card.xml
+++ b/app/src/main/res/layout/catalog_card.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="@dimen/activity_vertical_margin">
+            android:padding="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="left"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="12dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 tools:text="From 01/12/2016 To 20/01/2017"/>
 
