--- a/app/src/main/res/layout/receipt_card.xml
+++ b/app/src/main/res/layout/receipt_card.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin">
+        android:padding="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,14 +44,31 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/receiptDateTextView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="left"
-            android:layout_marginTop="16dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            tools:text="01/12/2016"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="12dp">
+
+            <TextView
+                android:id="@+id/receiptPriceTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                tools:text="12.00 PLN"/>
+
+            <TextView
+                android:id="@+id/receiptDateTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                tools:text="01/12/2016"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
