--- a/app/src/main/res/layout/fragment_queries.xml
+++ b/app/src/main/res/layout/fragment_queries.xml
@@ -7,6 +7,7 @@
              tools:context="com.steveq.cashcontrol.ui.fragments.QueriesFragment">
 
     <RadioGroup
+        android:id="@+id/mainRadioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
